cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

project(4DSfM VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

set(BUILD_SHARED_LIBS OFF)
set(BUILD_TESTS ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -DDEBUG")
    elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    endif()
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Od")
endif()
if(WIN32)
    cmake_policy(SET CMP0135 NEW)
endif()
set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
include(ExternalEigen)
include (ExternalOpenCV)
include(ExternalVTK)
include(ExternalGlog)

add_subdirectory(3rdparty/cnpy)
add_subdirectory(src)

if (BUILD_SHARED_LIBS)
    set_target_properties(4DSfM PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()
if (BUILD_TESTS)
    include(ExternalGTest)
    add_subdirectory(test)
endif(BUILD_TESTS)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/include DESTINATION include)